media query completed

--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,41 @@
 <html>
-<!--overall-->
 
 <head>
   <link rel="stylesheet" href="../main.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Vicky Wang</title>
+  <meta property="og:site_name" content="VICKY WANG">
+
+  <meta property="og:url" content="/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="VICKY WANG" />
+  <meta property="og:description" content="Hi! Thanks for stopping by. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :) " />
+  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
+
+  <meta name="twitter:url" content="https://vickywang.design">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="VICKY WANG" />
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <meta property="twitter:title" content="VICKY WANG">
+  <meta property="twitter:description" content="Hi! Thanks for stopping by. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :)">
+  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
 </head>
 
 <body>
   <!--head-->
-  <div class="container-head"id="topbar">
+  <div class="container-head" id="topbar">
 
     <div class="container-head-left">
       <a href="http://vickywang.design/" class="pointer"> VICKY WANG
@@ -16,7 +44,7 @@
       </p>
     </div>
     <div class="container-head-right" id="topbar-right">
-      <div> <a href="/design" class="inactive"> DESIGN </a>
+      <div> <a href="/" class="inactive"> DESIGN </a>
       </div>
       <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
       </div>
@@ -60,13 +88,13 @@
         <strong class="text-left-title">EDUCATION</strong>
       </div>
       <div class="container-body-right">
-        <div class="item-right">
+        <div>
           <p class="text-right-title">University of California, Berkeley</p>
         </div>
-        <div class="item-right">
-          <p class="text-time">Aug. 2015 - May. 2019</p>
+        <div>
+          <p class="text-time">August 2015 - May 2019</p>
         </div>
-        <div class="item-right">
+        <div>
           <p class="text-right-description">Master of Architecture and Building Science/Technology
           </p>
         </div>
@@ -89,7 +117,7 @@
           <p class="text-right-title">Buro Ole Scheeren </p>
         </div>
         <div class="item-right">
-          <p class="text-time">August. 2017 - July. 2018 </p>
+          <p class="text-time">August 2017 - July 2018 </p>
         </div>
         <div class="container-body-right-insertion">
           <div class="item-right">
@@ -109,7 +137,7 @@
           <p class="text-right-title">In Design Studio</p>
         </div>
         <div class="item-right">
-          <p class="text-time">May. 2017 - August. 2017</p>
+          <p class="text-time">May 2017 - August 2017</p>
         </div>
         <div class="container-body-right-insertion">
           <div class="item-right">
@@ -131,7 +159,7 @@
           <p class="text-right-title">PDI Design Group </p>
         </div>
         <div class="item-right">
-          <p class="text-time">August. 2016 - July. 2017</p>
+          <p class="text-time">August 2016 - July 2017</p>
         </div>
         <div class="container-body-right-insertion">
           <div class="item-right">
@@ -153,7 +181,7 @@
           <p class="text-right-title">Do Union </p>
         </div>
         <div class="item-right">
-          <p class="text-time">July. 2010 - May. 2012</p>
+          <p class="text-time">July 2010 - May 2012</p>
         </div>
         <div class="container-body-right-insertion">
           <div class="item-right">
@@ -296,4 +324,3 @@
 </body>
 
 </html>
-<!--overall-->
