--- a/architecture/index.html
+++ b/architecture/index.html
@@ -1,8 +1,35 @@
 <html>
-<!--overall-->
-
 <head>
   <link rel="stylesheet" href="../main.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Vicky Wang</title>
+  <meta property="og:site_name" content="VICKY WANG">
+
+  <meta property="og:url" content="/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="VICKY WANG" />
+  <meta property="og:description" content="Hi! Thanks for stopping by. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :) " />
+  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
+
+  <meta name="twitter:url" content="https://vickywang.design">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="VICKY WANG" />
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <meta property="twitter:title" content="VICKY WANG">
+  <meta property="twitter:description" content="Hi! Thanks for stopping by. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :)">
+  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
 </head>
 
 <body>
@@ -17,7 +44,7 @@
     </div>
 
     <div class="container-head-right" id="topbar-right">
-      <div> <a href="/design" class="inactive"> DESIGN </a>
+      <div> <a href="/" class="inactive"> DESIGN </a>
       </div>
       <div> <a href="/architecture" class="active"> ARCHITECTURE </a>
       </div>
@@ -141,7 +168,7 @@
 
   <!--body6-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/LACMA.jpg"
       alt="OTHER ACADEMIC WORKS" class="image-hover">
 
     <div class="image-text-hover">
@@ -205,4 +232,3 @@
 </body>
 
 </html>
-<!--overall-->
