--- a/photography/index.html
+++ b/photography/index.html
@@ -1,13 +1,40 @@
 <html>
-<!--overall-->
-
 <head>
   <link rel="stylesheet" href="../main.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Vicky Wang</title>
+  <meta property="og:site_name" content="VICKY WANG">
+
+  <meta property="og:url" content="/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="VICKY WANG" />
+  <meta property="og:description" content="Hi! Thanks for stopping by. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :) " />
+  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
+
+  <meta name="twitter:url" content="https://vickywang.design">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="VICKY WANG" />
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <meta property="twitter:title" content="VICKY WANG">
+  <meta property="twitter:description" content="Hi! Thanks for stopping by. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :)">
+  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
 </head>
 
 <body>
   <!--head-->
-  <div class="container-head"id="topbar">
+  <div class="container-head" id="topbar">
 
     <div class="container-head-left">
       <a href="http://vickywang.design/" class="pointer"> VICKY WANG
@@ -17,7 +44,7 @@
     </div>
 
     <div class="container-head-right" id="topbar-right">
-      <div> <a href="/design" class="inactive"> DESIGN </a>
+      <div> <a href="/" class="inactive"> DESIGN </a>
       </div>
       <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
       </div>
@@ -36,13 +63,12 @@
   <div class="container_body">
     <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg"
       alt="Yellowstone National Park">
-  </div>
-  <div>
+    </div>
+
     <div class="container-body-description">
       <p class="text-body-title">Yellowstone National Park</p>
       <p class="text-body-description"> September, 2020</p>
     </div>
-  </div>
 
   <hr>
 
@@ -242,7 +268,7 @@
       <p class="text-body-description"> December, 2019</p>
     </div>
   </div>
-  
+
   <hr>
 
   <div class="container_body">
@@ -303,4 +329,3 @@
 </body>
 
 </html>
-<!--overall-->
