--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   <title>Vicky Wang</title>
   <meta property="og:site_name" content="VICKY WANG">
-  
-  <meta property="og:url" content="http://vickywang.design" />
+
+  <meta property="og:url" content="/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
@@ -26,86 +26,104 @@
   <meta property="twitter:description" content="Hi! Thanks for stopping by. 
   I enjoy design and code who loves solving challenging problems. 
   Interested in what you see? Shoot me an email :)">
-  <meta name="twitter:image"
-    content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="750">
-    <meta property="og:image:height" content="750">
+  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
 
 </head>
 
-<body>
+<body class="style">
   <!--head-->
   <div class="container-head" id="topbar">
 
     <div class="container-head-left">
-      <a href="http://vickywang.design/"> VICKY WANG
+      <a href="http://vickywang.design/" class="pointer"> VICKY WANG
       </a>
       <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
       </p>
     </div>
-
     <div class="container-head-right" id="topbar-right">
-      <div> <a herf="/design"> DESIGN </a>
+      <div> <a href="/" class="active"> DESIGN </a>
       </div>
-      <div> <a href="/architecture"> ARCHITECTURE </a>
+      <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
       </div>
-      <div> <a href="/photography"> PHOTOGRAPHY </a>
+      <div> <a href="/photography" class="inactive"> PHOTOGRAPHY </a>
       </div>
-      <div> <a href="/about"> ABOUT </a>
+      <div> <a href="/about" class="inactive"> ABOUT </a>
       </div>
     </div>
-
   </div>
   <!--head-->
+  <div class="blank"></div>
 
-  <!--body-->
+  <!--body1-->
   <div class="container_body">
     <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/kappe_house.jpg"
       alt="DRAWING OF KAPPE RAY HOUSE" class="image-hover">
 
     <div class="image-text-hover">
-      <div class="text">DRAWING OF KAPPE RAY HOUSE</div>
+      <div><a href="/architecture/recreation_commons">DRAWING OF KAPPE RAY HOUSE</a></div>
     </div>
   </div>
-  <!--body-->
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">The Making of Buildings ARCH 209, Fall 2016</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
+      <p class="text-body-description"> Instructor: Yung Ho Chang</p>
+
+    </div>
+
+  </div>
+  <!--body1-->
+  <div class="blank"></div>
+
+  <!--body2-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/Urban+Backyard.png"
+      alt="Urban Backyard" class="image-hover">
+
+    <div class="image-text-hover">
+      <div><a href="/architecture/recreation_commons">COMING SOON</a></div>
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Urban Backyard</p>
+      <p class="text-body-description">Fall 2020</p>
+
+    </div>
+
+  </div>
+  <!--body2-->
   <div class="blank-thicker"></div>
+
 
 
   <!--footer-->
   <div class="container_footer">
 
     <div id="infor">
-      <div>
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
-        </a>
+      <div> <a href="mailto:vickyw.design@gmail.com"><img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg"
+            alt="email"></a>
 
       </div>
-      <div>
-        <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
-          <img class="image_footer"
+      <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b"><img class="image_footer"
             src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-            alt="linkedin">
-        </a>
+            alt="linkedin" width="50" height="50">
+        </a> </div>
+
+      <div> <a href="https://medium.com/@vickywang.design"><img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium"
+            width="50" height="50"> </a>
       </div>
 
-      <div>
-        <a href="https://github.com/vicky-wyq">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
-        </a>
-      </div>
-
-      <div>
-        <a href="https://medium.com/@vickywang.design">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
-        </a>
+      <div> <a href="https://github.com/vicky-wyq"><img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github"
+            width="50" height="50"> </a>
       </div>
     </div>
-
     <p class="lighter_font">COPYRIGHT© VICKY WANG
     </p>
 
