--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
   <meta property="twitter:description" content="Hi! Thanks for stopping by. 
   I enjoy design and code who loves solving challenging problems. 
   Interested in what you see? Shoot me an email :)">
-  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+  <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
@@ -222,7 +222,7 @@
           <p class="text-right-title">Programming </p>
         </div>
         <div class="container-body-right-nomargin">
-          <p class="text-right-description">HTML, CSS, Javascript, Python
+          <p class="text-right-description">HTML, CSS, JavaScript, Python
           </p>
         </div>
 
@@ -317,7 +317,7 @@
       </div>
     </div>
 
-    <p class="lighter_font">COPYRIGHT© VICKY WANG
+    <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
     </p>
 
   </div>
