--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="main.css" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Vicky Wang</title>
@@ -13,12 +14,12 @@
   <meta property="og:description" content="Hi! Thanks for stopping by. 
   I enjoy design and code who loves solving challenging problems. 
   Interested in what you see? Shoot me an email :) " />
-  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
+  <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
 
-  <meta name="twitter:url" content="https://vickywang.design">
+  <meta name="twitter:url" content="//vickywang.design">
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="VICKY WANG" />
   <meta name="twitter:creator" content="VICKY WANG" />
@@ -26,7 +27,7 @@
   <meta property="twitter:description" content="Hi! Thanks for stopping by. 
   I enjoy design and code who loves solving challenging problems. 
   Interested in what you see? Shoot me an email :)">
-  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+  <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
@@ -104,27 +105,37 @@
   <div class="container_footer">
 
     <div id="infor">
-      <div> <a href="mailto:vickyw.design@gmail.com"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg"
-            alt="email"></a>
+      <div>
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
+        </a>
 
       </div>
-      <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b"><img class="image_footer"
+      <div>
+        <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
+          <img class="image_footer"
             src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-            alt="linkedin" width="50" height="50">
-        </a> </div>
-
-      <div> <a href="https://medium.com/@vickywang.design"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium"
-            width="50" height="50"> </a>
+            alt="linkedin">
+        </a>
       </div>
 
-      <div> <a href="https://github.com/vicky-wyq"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github"
-            width="50" height="50"> </a>
+      <div>
+        <a href="https://github.com/vicky-wyq">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
+        </a>
+      </div>
+
+      <div>
+        <a href="https://medium.com/@vickywang.design">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
+        </a>
       </div>
     </div>
-    <p class="lighter_font">COPYRIGHT© VICKY WANG
+
+    <p class="lighter_font">COPYRIGHT © VICKY WANG
     </p>
 
   </div>
