--- a/photography/index.html
+++ b/photography/index.html
@@ -287,45 +287,42 @@
 
   <!--footer-->
   <div class="container_footer">
-    <div class="container_footer">
 
-      <div id="infor">
-        <div>
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
-          </a>
+    <div id="infor">
+      <div>
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
+        </a>
 
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-              alt="linkedin">
-          </a>
-        </div>
-
-        <div>
-          <a href="https://github.com/vicky-wyq">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg"
-              alt="github">
-          </a>
-        </div>
-
-        <div>
-          <a href="https://medium.com/@vickywang.design">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg"
-              alt="medium">
-          </a>
-        </div>
+      </div>
+      <div>
+        <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
+            alt="linkedin">
+        </a>
       </div>
 
-      <p class="lighter_font">COPYRIGHT© VICKY WANG
-      </p>
+      <div>
+        <a href="https://github.com/vicky-wyq">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
+        </a>
+      </div>
 
+      <div>
+        <a href="https://medium.com/@vickywang.design">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
+        </a>
+      </div>
     </div>
+
+    <p class="lighter_font">COPYRIGHT © VICKY WANG
+    </p>
+
+  </div>
 </body>
 
 </html>
