adding new projects

--- a/source/about/index.html
+++ b/source/about/index.html
@@ -56,7 +56,7 @@
 
   </div>
   <!--head-->
-  <div class="blank-about"></div>
+  <div class="blank-top"></div>
 
 
 
@@ -71,7 +71,7 @@
         id="image-me">
       <div class="text-about-hi"><strong>Hello, I'm Vicky</strong></div>
       <div class="text-about-intro">
-        Currently working as a freelancer based in San Francisco. </div>
+        Currently working as a product desiger based in San Francisco. </div>
       <div class="text-about-intro">
         I am a designer who loves solving challenging problems. </div>
       <div class="text-about-intro">
@@ -85,21 +85,40 @@
 
       <div class="container-body-left">
         <!--container_left-->
-        <strong class="text-left-title">EDUCATION</strong>
+        <strong class="text-title-left">EDUCATION</strong>
       </div>
+
+
+
+
       <div class="container-body-right">
+
         <div>
-          <p class="text-right-title">University of California, Berkeley</p>
-        </div>
-        <div>
+          <p class="text-title-right">University of California, Berkeley</p>
           <p class="text-time">August 2015 - May 2019</p>
+          <div>
+            <p class="text-right-description">Master of Architecture and Building Science/Technology
+            </p>
+          </div>
         </div>
+
+        <br>
+
         <div>
-          <p class="text-right-description">Master of Architecture and Building Science/Technology
-          </p>
+          <p class="text-title-right"> Beijing University of Technology</p>
+          <p class="text-time">August 2013 - May 2009</p>
+          <div>
+            <p class="text-right-description"> College of Art and Design</p>
+          </div>
         </div>
+
+
       </div>
+
+
+
     </div>
+
     <hr>
 
     <div class="container-body-intro-row">
@@ -107,135 +126,109 @@
 
       <div class="container-body-left">
         <!--container_left-->
-        <strong class="text-left-title">EXPERIENCE</strong>
+        <strong class="text-title-left">EXPERIENCE</strong>
       </div>
 
       <div class="container-body-right">
 
-
-        <div class="item-right">
-          <p class="text-right-title">Buro Ole Scheeren </p>
-        </div>
-        <div class="item-right">
-          <p class="text-time">August 2017 - July 2018 </p>
-        </div>
+        <p class="text-title-right">Buro Ole Scheeren </p>
+        <p class="text-time">August 2017 - July 2018 </p>
         <div class="container-body-right-insertion">
-          <div class="item-right">
-            <p class="vertical-line"></p>
-          </div>
+          <p class="vertical-line"></p>
           <div class="container-body-right-nomargin">
-            <div class="item-right">
-              <p class="text-right-location">Beijing, China</p>
-            </div>
-            <div class="item-right">
-              <p class="text-right-location">Architectural Assistant </p>
-            </div>
+            <p class="text-right-description">Beijing, China</p>
+            <p class="text-right-description">Architectural Assistant </p>
           </div>
         </div>
+        <br>
 
-        <div class="item-right">
-          <p class="text-right-title">In Design Studio</p>
-        </div>
-        <div class="item-right">
-          <p class="text-time">May 2017 - August 2017</p>
-        </div>
+
+
+        <p class="text-title-right">In Design Studio</p>
+        <p class="text-time">May 2017 - August 2017</p>
         <div class="container-body-right-insertion">
-          <div class="item-right">
-            <p class="vertical-line"></p>
-          </div>
+          <p class="vertical-line"></p>
           <div class="container-body-right-nomargin">
-            <div class="item-right">
-              <p class="text-right-location">New York, U.S.</p>
-            </div>
-            <div class="item-right">
-              <p class="text-right-location">Summer Intern </p>
-            </div>
+            <p class="text-right-description">New York, U.S.</p>
+            <p class="text-right-description">Summer Intern </p>
           </div>
         </div>
+        <br>
 
 
-
-        <div class="item-right">
-          <p class="text-right-title">PDI Design Group </p>
-        </div>
-        <div class="item-right">
-          <p class="text-time">August 2016 - July 2017</p>
-        </div>
+        <p class="text-title-right">PDI Design Group </p>
+        <p class="text-time">August 2016 - July 2017</p>
         <div class="container-body-right-insertion">
-          <div class="item-right">
-            <p class="vertical-line"></p>
-          </div>
+          <p class="vertical-line"></p>
           <div class="container-body-right-nomargin">
-            <div class="item-right">
-              <p class="text-right-location">Beijing, China</p>
-            </div>
-            <div class="item-right">
-              <p class="text-right-location">Architectural Designer </p>
-            </div>
+            <p class="text-right-description">Beijing, China</p>
+            <p class="text-right-description">Architectural Designer </p>
           </div>
         </div>
+        <br>
 
 
-
-        <div class="item-right">
-          <p class="text-right-title">Do Union </p>
-        </div>
-        <div class="item-right">
-          <p class="text-time">July 2010 - May 2012</p>
-        </div>
+        <p class="text-title-right">Do Union </p>
+        <p class="text-time">July 2010 - May 2012</p>
         <div class="container-body-right-insertion">
-          <div class="item-right">
-            <p class="vertical-line"></p>
-          </div>
+          <p class="vertical-line"></p>
           <div class="container-body-right-nomargin">
-            <div class="item-right">
-              <p class="text-right-location">Beijing, China</p>
-            </div>
-            <div class="item-right">
-              <p class="text-right-location">Architectural Intern</p>
-            </div>
+            <p class="text-right-description">Beijing, China</p>
+            <p class="text-right-description">Architectural Intern</p>
           </div>
         </div>
+
+
+
       </div>
     </div>
     <hr>
+
+
+
     <div class="container-body-intro-row">
       <!--container-body 3 SKILLS-->
 
       <div class="container-body-left">
         <!--container_left-->
-        <strong class="text-left-title">SKILL&TOOLS</strong>
+        <strong class="text-title-left">SKILL&TOOLS</strong>
       </div>
 
       <div class="container-body-right">
 
 
         <div class="item-right">
-          <p class="text-right-title">UI/UX </p>
+          <p class="text-title-right">UI/UX </p>
         </div>
         <div class="container-body-right-nomargin">
           <p class="text-right-description">Sketch, Adobe XD, Figma
           </p>
         </div>
+        <br>
 
         <div class="item-right">
-          <p class="text-right-title">Programming </p>
+          <p class="text-title-right">Programming </p>
         </div>
+
         <div class="container-body-right-nomargin">
           <p class="text-right-description">HTML, CSS, JavaScript, Python
           </p>
         </div>
 
+        <br>
+
         <div class="item-right">
-          <p class="text-right-title">2D Graphic </p>
+          <p class="text-title-right">2D Graphic </p>
         </div>
         <div class="container-body-right-nomargin">
           <p class="text-right-description">Adobe Suite (Illustrator, Photoshop, InDesign), AutoCAD
           </p>
         </div>
 
+        <br>
+
         <div class="item-right">
-          <p class="text-right-title">3D Modelling and VR
+          <p class="text-title-right">3D Modelling and VR
           </p>
         </div>
         <div class="container-body-right-nomargin">
@@ -243,8 +236,10 @@
           </p>
         </div>
 
+        <br>
+
         <div class="item-right">
-          <p class="text-right-title">Fabrication
+          <p class="text-title-right">Fabrication
           </p>
         </div>
         <div class="container-body-right-nomargin">
@@ -253,8 +248,10 @@
           </p>
         </div>
 
+        <br>
+
         <div class="item-right">
-          <p class="text-right-title">Research
+          <p class="text-title-right">Research
           </p>
         </div>
         <div class="container-body-right-nomargin">
@@ -263,13 +260,18 @@
           </p>
         </div>
 
+        <br>
+
+
+
+
         <div class="item-right">
-          <p class="text-right-title">Certificate
+          <p class="text-title-right">Certificate
           </p>
         </div>
         <div class="container-body-right-nomargin">
           <p class="text-right-description">LEED Green Associate (id:11321289)
-          </p>
+            <br> UC Berkeley, Environmental Design [IN]ARCH ADV</p>
         </div>
       </div>
     </div>
