--- a/source/architecture/index.html
+++ b/source/architecture/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
   <link rel="stylesheet" href="../main.css">
 
@@ -55,7 +56,6 @@
     </div>
   </div>
   <!--head-->
-  <div class="blank"></div>
 
   <!--body1-->
   <div class="container_body">
@@ -68,7 +68,7 @@
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">Integrated Design Studio ARCH 203, Fall 2018</p>
+      <p class="text-body-title">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
       <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
       <p class="text-body-description"> Instructor: Roddy Creedon</p>
       <p class="text-body-description">Site: 110 Franklin St. San Francisco, CA, U.S. 94102</p>
@@ -89,17 +89,36 @@
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">Competition, HYDE PARK LIBRARY LONDON, Fall 2017</p>
-      <p class="text-body-description">Site: Location: Hyde Park, London</p>
-      <p class="text-body-description">7500 square metres approx.</p>
-      <p class="text-body-description">Maximum Built Area: 4000 square metres</p>
-      <p class="text-body-description"> (i.e. Maximum Cumulative floor area for all the floors)</p>
+      <p class="text-body-title">THE MAKING OF BUILDINGS, ARCH 209, Fall 2016</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
+      <p class="text-body-description">Instructor: Yung Ho Chang</p>
     </div>
   </div>
   <!--body2-->
   <hr>
 
   <!--body3-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg"
+      alt="RECREATION COMMONS" class="image-hover">
+
+    <div class="image-text-hover">
+      <div>NARROW STRIPES</div>
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017</p>
+      <p class="text-body-description">Site: Location: Hyde Park, London</p>
+      <p class="text-body-description">7500 square metres approx.</p>
+      <p class="text-body-description">Maximum Built Area: 4000 square metres</p>
+      <p class="text-body-description"> (i.e. Maximum Cumulative floor area for all the floors)</p>
+    </div>
+  </div>
+  <!--body3-->
+  <hr>
+
+  <!--body4-->
   <div class="container_body">
     <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
       alt="MANIFOLD GROUND" class="image-hover">
@@ -110,18 +129,19 @@
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">[IN]ARCH ADV, Summer 2014</p>
+      <p class="text-body-title">[IN]ARCH ADV, SUMMERS 2014</p>
       <p class="text-body-description">Summer Program, CED, UC Berkeley</p>
       <p class="text-body-description">Instructor: Keith Plymale</p>
       <p class="text-body-description">Site: 450 Hayes St. San Francisco, CA 94102</p>
     </div>
   </div>
-  <!--body3-->
+  <!--body4-->
   <hr>
 
   <!--body4-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recovery_of_river_edges/recovery+of+river+edges.jpg"
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recovery_of_river_edges/recovery+of+river+edges.jpg"
       alt="RECOVERY OF RIVER EDGES" class="image-hover">
 
     <div class="image-text-hover">
@@ -145,7 +165,8 @@
 
   <!--body5-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/the_rotation_curves/Rotation+Curves.svg"
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/the_rotation_curves/Rotation+Curves.svg"
       alt="THE ROTATION CURVES" class="image-hover" id="image-rotation-curve">
 
     <div class="image-text-hover">
@@ -225,7 +246,7 @@
       </div>
     </div>
 
-    <p class="lighter_font">COPYRIGHT © VICKY WANG
+    <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
     </p>
 
   </div>
