--- a/source/index.html
+++ b/source/index.html
@@ -60,18 +60,18 @@
 
   <!--body1-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/kappe_house.jpg"
+    <img src="./layout_gardenershub.png"
       alt="DRAWING OF KAPPE RAY HOUSE" class="image-hover">
 
     <div class="image-text-hover">
-      <div><a href="/architecture/recreation_commons">DRAWING OF KAPPE RAY HOUSE</a></div>
+      <div><a href="/architecture/recreation_commons">GARDENERS HUB</a></div>
     </div>
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">The Making of Buildings ARCH 209, Fall 2016</p>
-      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
-      <p class="text-body-description"> Instructor: Yung Ho Chang</p>
+      <p class="text-body-title">GARDENERS HUB DESIGN FOR GARDENERS</p>
+      <p class="text-body-description">Individual Work</p>
+      <p class="text-body-description">Fall 2020</p>
 
     </div>
 
@@ -81,16 +81,17 @@
 
   <!--body2-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/Urban+Backyard.png"
+    <img src="./layout_mealplanner.png"
       alt="Urban Backyard" class="image-hover">
 
     <div class="image-text-hover">
-      <div><a href="/architecture/recreation_commons">COMING SOON</a></div>
+      <div><a href="/architecture/recreation_commons">MEAL PLANNER</a></div>
     </div>
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">Urban Backyard</p>
+      <p class="text-body-title">A MOBILE APP HELPS PLANNING A HEALTHY AND EFFICIENT MEAL</p>
+      <p class="text-body-description">Individual Work</p>
       <p class="text-body-description">Fall 2020</p>
 
     </div>
@@ -135,7 +136,7 @@
       </div>
     </div>
 
-    <p class="lighter_font">COPYRIGHT © VICKY WANG
+    <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
     </p>
 
   </div>
