--- a/source/photography/index.html
+++ b/source/photography/index.html
@@ -58,7 +58,6 @@
   <!--head-->
 
 
-  <div class="blank"></div>
 
   <div class="container_body">
     <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg"
@@ -319,7 +318,7 @@
       </div>
     </div>
 
-    <p class="lighter_font">COPYRIGHT © VICKY WANG
+    <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
     </p>
 
   </div>
