move out of source

--- a/architecture/index.html
+++ b/architecture/index.html
@@ -137,8 +137,26 @@
   </div>
   <!--body4-->
   <hr>
+  <!--body5-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
+      alt="MANIFOLD GROUND" class="image-hover">
 
-  <!--body4-->
+    <div class="image-text-hover">
+      <div>MANIFOLD GROUND</div>
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">[IN]ARCH ADV, SUMMERS 2014</p>
+      <p class="text-body-description">Summer Program, CED, UC Berkeley</p>
+      <p class="text-body-description">Instructor: Keith Plymale</p>
+      <p class="text-body-description">Site: 450 Hayes St. San Francisco, CA 94102</p>
+    </div>
+  </div>
+  <!--body5-->
+  <hr>
+  <!--body5-->
   <div class="container_body">
     <img
       src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recovery_of_river_edges/recovery+of+river+edges.jpg"
@@ -160,7 +178,7 @@
       </p>
     </div>
   </div>
-  <!--body4-->
+  <!--body5-->
   <hr>
 
   <!--body5-->
