--- a/about/index.html
+++ b/about/index.html
@@ -69,13 +69,14 @@
       <!--container-body 1-->
       <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/about/me.png" alt="me"
         id="image-me">
+
       <div class="text-about-hi"><strong>Hello, I'm Vicky</strong></div>
       <div class="text-about-intro">
-        Currently working as a product desiger based in San Francisco. </div>
-      <div class="text-about-intro">
-        I am a designer who loves solving challenging problems. </div>
-      <div class="text-about-intro">
-        I've worked on digital products related to design and code.</div>
+        a Product Designer based in San Francisco Bay Area who loves solving challenging problems and transform complexity into simplicity. I've worked on digital products related to design and code. 
+
+
+
+</div>
     </div>
     <!--container_intro-->
     <hr>
@@ -237,6 +238,18 @@
         </div>
 
         <br>
+        <div class="item-right">
+          <p class="text-title-right">Research
+          </p>
+        </div>
+        <div class="container-body-right-nomargin">
+          <p class="text-right-description">Affinity Diagramming, Cognitive Mapping, Behavioral
+            Mapping, Competitive Testing, Contextual Inquiry, Survey, Experience Prototyping
+          </p>
+        </div>
+        
+
+        <br>
 
         <div class="item-right">
           <p class="text-title-right">Fabrication
@@ -245,18 +258,6 @@
         <div class="container-body-right-nomargin">
           <p class="text-right-description">3D Printing, Blade Cutter (Zund S3 Digital), CNC (Techno
             Isel 3-axis CNC router), Laser Cutter,3D Scanner (NextEngine 3D)
-          </p>
-        </div>
-
-        <br>
-
-        <div class="item-right">
-          <p class="text-title-right">Research
-          </p>
-        </div>
-        <div class="container-body-right-nomargin">
-          <p class="text-right-description">Affinity Diagramming, Cognitive Mapping, Behavioral
-            Mapping, Competitive Testing, Contextual Inquiry, Survey, Experience Prototyping
           </p>
         </div>
 
