--- a/architecture/index.html
+++ b/architecture/index.html
@@ -63,7 +63,7 @@
       alt="RECREATION COMMONS" class="image-hover" id="image-rc">
 
     <div class="image-text-hover">
-      <div><a href="/architecture/recreation_commons">RECREATION COMMONS></a></div>
+      <div><a href="/architecture/recreation_commons">RECREATION COMMONS</a></div>
     </div>
   </div>
   <div>
@@ -78,24 +78,7 @@
   </div>
   <!--body1-->
   <hr>
-  <!--body2-->
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg"
-      alt="RECREATION COMMONS" class="image-hover">
 
-    <div class="image-text-hover">
-      <div>NARROW STRIPES</div>
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">THE MAKING OF BUILDINGS, ARCH 209, Fall 2016</p>
-      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
-      <p class="text-body-description">Instructor: Yung Ho Chang</p>
-    </div>
-  </div>
-  <!--body2-->
-  <hr>
 
   <!--body3-->
   <div class="container_body">
@@ -115,10 +98,28 @@
       <p class="text-body-description"> (i.e. Maximum Cumulative floor area for all the floors)</p>
     </div>
   </div>
-  <!--body3-->
+  <!--body3-->  
+  <hr>
+  <!--body4-->
+  <div class="container_body">
+    <img src="./KP_Diagram.jpg"
+      alt="MANIFOLD GROUND" class="image-hover">
+
+    <div class="image-text-hover">
+      <div>KAPPE HOUSE</div>
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
+      <p class="text-body-description">Instructor: Yung Ho Chang</p>
+    </div>
+  </div>
+  <!--body4-->
   <hr>
 
-  <!--body4-->
+  <!--body5-->
   <div class="container_body">
     <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
       alt="MANIFOLD GROUND" class="image-hover">
@@ -135,28 +136,10 @@
       <p class="text-body-description">Site: 450 Hayes St. San Francisco, CA 94102</p>
     </div>
   </div>
-  <!--body4-->
-  <hr>
   <!--body5-->
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
-      alt="MANIFOLD GROUND" class="image-hover">
 
-    <div class="image-text-hover">
-      <div>MANIFOLD GROUND</div>
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">[IN]ARCH ADV, SUMMERS 2014</p>
-      <p class="text-body-description">Summer Program, CED, UC Berkeley</p>
-      <p class="text-body-description">Instructor: Keith Plymale</p>
-      <p class="text-body-description">Site: 450 Hayes St. San Francisco, CA 94102</p>
-    </div>
-  </div>
-  <!--body5-->
   <hr>
-  <!--body5-->
+  <!--body6-->
   <div class="container_body">
     <img
       src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recovery_of_river_edges/recovery+of+river+edges.jpg"
@@ -178,7 +161,7 @@
       </p>
     </div>
   </div>
-  <!--body5-->
+  <!--body6-->
   <hr>
 
   <!--body5-->
