--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -67,37 +67,147 @@
     <!--body1-->
     <div class="container_body">
       <img
+        src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Diagram2.jpg"
+        alt="DIAGRAM" class="image">
+
+      <div class="image-text">
+        <div class="text_button">EXERCISE VS. LEISURE</div>
+      </div>
+    </div>
+
+    <!--body1-->
+    <!--body2-->
+    <div class="container_body">
+      <img src="programs.jpg" alt="DIAGRAM" class="image">
+
+      <div class="image-text">
+        <div class="text_button">PRIVATE VS. PUBLIC</div>
+      </div>
+    </div>
+    <!--body2-->
+
+    <!--body2-->
+    <div class="container_body">
+      <img src="./diagram1.jpg" alt="DIAGRAM" class="image">
+
+      <div class="image-text">
+        <div class="text_button">TWO VOLUMES</div>
+      </div>
+    </div>
+    <!--body2-->
+    <!--body2-->
+    <div class="container_body">
+      <img src="./diagram2.jpg" alt="DIAGRAM" class="image">
+
+      <div class="image-text">
+        <div class="text_button">LIGHT & AIR</div>
+      </div>
+    </div>
+    <!--body2-->
+    <!--body2-->
+    <div class="container_body">
+      <img src="./diagram3.jpg" alt="DIAGRAM" class="image">
+
+      <div class="image-text">
+        <div class="text_button">FACADE</div>
+      </div>
+    </div>
+    <!--body2-->
+    <!--body2-->
+    <div class="container_body">
+      <img src="./section_perspective.jpg" alt="DIAGRAM" class="image">
+
+      <div class="image-text">
+        <div class="text_button">SECTION PERSPECTIVE</div>
+      </div>
+    </div>
+    <!--body2-->
+    <!--body3-->
+    <div class="container_body">
+      <img
         src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Street+View.jpg"
-        alt="STREET VIEW" class="image" id="image-rc">
+        alt="STREET VIEW" class="image">
 
       <div class="image-text">
         <div class="text_button">STREET VIEW</div>
       </div>
     </div>
-    <!--body1-->
-    <!--body2-->
-    <div class="container_body">
-      <img
-        src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Diagram.jpg"
-        alt="DIAGRAM" class="image">
-
-      <div class="image-text">
-        <div class="text_button">DIAGRAM</div>
-      </div>
-    </div>
-    <!--body2-->
-    <!--body3-->
-    <div class="container_body">
-      <img
-        src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Diagram2.jpg"
-        alt="DIAGRAM" class="image">
-
-      <div class="image-text">
-        <div class="text_button">DIAGRAM</div>
-      </div>
-    </div>
     <!--body3-->
     <!--body4-->
+
+    <!--body4-->
+
+    <!--body5-->
+    <div class="container_body">
+      <img src="./int1.jpg" alt="SITE PLAN" class="image">
+
+      <div class="image-text">
+        <div class="text_button">INTERIOR VIEW</div>
+      </div>
+    </div>
+    <!--body5-->
+    <!--body5.1-->
+    <div class="container_body">
+      <img src="./int2.jpg" alt="SITE PLAN" class="image">
+
+      <div class="image-text">
+        <div class="text_button">INTERIOR VIEW</div>
+      </div>
+    </div>
+    <!--body5.1-->
+
+    <!--body6-->
+    <div class="container_body">
+      <img src="./siteplan.jpg" alt="SITE PLAN" class="image">
+
+      <div class="image-text">
+        <div class="text_button">SITE PLAN</div>
+      </div>
+    </div>
+    <!--body6-->
+
+    <!--body6-->
+    <div class="container_body">
+      <img src="./floorplan1.jpg" alt="FLOOR PLAN" class="image">
+
+      <div class="image-text">
+        <div class="text_button">FLOOR PLAN</div>
+      </div>
+    </div>
+    <!--body6-->
+    <!--body7-->
+    <div class="container_body">
+      <img src="./floorplan2.jpg" alt="FLOOR PLAN" class="image">
+
+      <div class="image-text">
+        <div class="text_button">FLOOR PLAN</div>
+      </div>
+    </div>
+    <!--body7-->
+    <!--body7.1-->
+    <div class="container_body">
+      <img src="./floorplan3.jpg" alt="FLOOR PLAN" class="image">
+
+      <div class="image-text">
+        <div class="text_button">FLOOR PLAN</div>
+      </div>
+    </div>
+    <!--body7.1-->
+    <!--body8-->
+    <div class="container_body">
+      <img src="./section.jpg" alt="SECTION" class="image">
+
+      <div class="image-text">
+        <div class="text_button">SECTION</div>
+      </div>
+    </div>
+    <!--body8-->
+
+
+
+
+
+    <!--body-->
     <div class="container_body">
       <img
         src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/00_Arch_Rec_Conms_Site.jpg"
@@ -107,8 +217,9 @@
         <div class="text_button">SITE</div>
       </div>
     </div>
-    <!--body4-->
 
+
+    <!--body-->
 
     <!--footer-->
     <div class="container_footer">
@@ -146,7 +257,7 @@
         </div>
       </div>
 
-      <p class="lighter_font">COPYRIGHT© VICKY WANG
+      <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
       </p>
 
     </div>
