--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
       alt="DRAWING OF KAPPE RAY HOUSE" class="image-hover">
 
     <div class="image-text-hover">
-      <div><a href="/architecture/recreation_commons">GARDENERS HUB</a></div>
+      <div><a href="/gardeners_hub">GARDENERS HUB</a></div>
     </div>
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">GARDENERS HUB DESIGN FOR GARDENERS</p>
+      <p class="text-body-title">GARDENER'S HUB CREATES FRIENDSHIP FOR LOCAL COMMUNITY</p>
       <p class="text-body-description">Individual Work</p>
       <p class="text-body-description">Fall 2020</p>
 
@@ -77,7 +77,7 @@
 
   </div>
   <!--body1-->
-  <div class="blank"></div>
+  <hr>
 
   <!--body2-->
   <div class="container_body">
@@ -85,7 +85,7 @@
       alt="Urban Backyard" class="image-hover">
 
     <div class="image-text-hover">
-      <div><a href="/architecture/recreation_commons">MEAL PLANNER</a></div>
+      <div><a href="/meal_planner">MEAL PLANNER</a></div>
     </div>
   </div>
   <div>
