Adjusted width for projects

--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -67,23 +67,20 @@
     <!--body1-->
     <div class="container_body">
       <div class="container-body-description">
-        GARDENERS HUB
-      </div>
-
-      <div class="container-body-project">
-
+        <p>GARDENERS HUB</p>
         <p class="text-body-description">Gardener's hub designs for sustainable gardening that
           brings friendship to the local
           community
         </p>
       </div>
-      <br>
-      <img src="./layout_gardenershub.png" alt="DIAGRAM" class="image">
-      <br>
-      <br>
 
+      <br>
+      <div class="container-body-project-img">
+        <img src="./layout_gardenershub.png" alt="DIAGRAM" class="image">
+      </div>
 
-
+      <br>
+      <br>
 
       <div class="container-body-project">
         <p class="text-body-description">Contribution: Design Research, UX/UI Design, Visual Design,
@@ -142,7 +139,9 @@
 
       </div>
       <br>
-      <img src="./solution01.png" alt="DIAGRAM" class="image">
+      <div class="container-body-project-img">
+        <img src="./solution01.png" alt="DIAGRAM" class="image">
+        </div>
       <br>
 
 
